fixed some player issues, also added display winenr, need to fix diagonal wins not showing

--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,11 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+.display{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
